Starting to fill in logos.html

--- a/logos.html
+++ b/logos.html
@@ -19,7 +19,9 @@
 
         <section id="project">
 			<h2>Logos</h2>
-            <!---->
+			<hr />
+			<p>One of the first thing I did with a computer is drawing. When I learned about advanced tools, I started making logos for my own use for fun. I do not consider myself an artist, quite the contrary, but I like my ideas and what I have done with them. What follows are my attempts to do logos for different reasons.</p>
+            <!--Add logos with context-->
         </section>
         
         <footer>
