--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 						Immersed in the world of computer science from a very young age, I quickly became curious to understand the technologies that are part of our daily lives by tinkering and searching for information by myself.
 					</p>
 					<p>
-						That's why I decided to join ISIMA, a French engineering school specialized in computer science after my CPGE at the Edouard Branly high school in Lyon in order to acquire more information and to make it my job. These trainings taught me rigor with the help of scientific knowledge like mathematics, industrial sciences, physics and, of course, computer science...
+						That's why I decided to join ISIMA, a French engineering school specialized in computer science after my CPGE at the Edouard Branly high school in Lyon in order to acquire more information and to gain experience to make it my job. These trainings taught me rigor with the help of scientific knowledge like mathematics, industrial sciences, physics and, of course, computer science.
 					</p>
 					<p>
-						My engineering studies have allowed me to acquire skills in C, C++, C#, Java and SQL which completes my knowledge acquired as a self-taught person, such as Python, HTML, CSS as well as PHP. Finally, I master GNU/Linux and Windows operating systems.
+						My engineering studies have allowed me to acquire skills in C, C++, C# (.NET), Java and SQL which completes my knowledge acquired as a self-taught person, such as Python, HTML, CSS as well as PHP. Finally, I use GNU/Linux and Windows operating systems.
 					</p>
 					<p>
 						Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker/9-ball). In my free time, I also like to watch movies and series... and cat pictures of course.
 					</p>
 					<p>
-						Finally, I studied three languages in addition of French (native language): English (level B2-C1), Spanish (level B1) and Mandarin (basic knowledge).
+						Finally, I studied three languages in addition of French (my native language): English (B2-C1), Spanish (B1) and Mandarin (notions).
 					</p>
 				</article>
 				<aside>
@@ -43,22 +43,23 @@
 					</div>
 					<div class="card-body">
 						<h3 class="card-name">Tristan Bony</h3>
-						<p class="card-work">Student in software engineering and computer systems @ ISIMA, Clermont-Ferrand</p>
+						<p class="card-work">Student in Software Engineering and Information Systems @ ISIMA, Aubière, France</p>
 						<ul class="card-ul">
 							<li class="card-li">
-								<span>Clermont-Ferrand, FRANCE</span>
+								<span>Clermont-Ferrand, France</span>
 							</li>
 							<li class="card-li">
 								<a href="tel:+33642089117">+33(0)6 42 08 91 17</a>
 							</li>
 							<li class="card-li">
-								<a href="mailto:tristan.Bony@proton.me">tristan.Bony@proton.me</a>
+								<a href="mailto:tristan.bony@proton.me">tristan.bony@proton.me</a>
 							</li>
 						</ul>
-						<p><a href="./assets/pdf/CV.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
+						<p><a href="./assets/pdf/CV_English.pdf" target="_blank" class="card-cv">Download my CV (English)</a></p>
+						<p><a href="./assets/pdf/CV_French.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.linkedin.com/in/tristanBony/" target="_blank" title="Visit my LinkedIn" class="card-link">
+						<a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="card-link">
 							<img src="./assets/images/LI-In-Bug.png" alt="LinkedIn" />
 						</a>
 						<a href="https://www.twitter.com/TristanB0" target="_blank" title="Come see my tweets" class="card-link">
@@ -158,11 +159,3 @@
 		<script src="./script.js"></script>
 	</body>
 </html>
-
-<!--
-Le premier à me contacter aura sa prochaine pizza du mercredi soir offerte ! ;)
-Voilà, c'est cadeau
-En même temps c'est mérité
-Je n'étais pas sûr que quelqu'un soit motivé jusque-là
-BiZZous
--->
