--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						That's why I decided to join ISIMA, a French engineering school specialized in computer science after my CPGE at the Edouard Branly high school in Lyon in order to acquire more information and to gain experience to make it my job. These trainings taught me rigor with the help of scientific knowledge like mathematics, industrial sciences, physics and, of course, computer science.
 					</p>
 					<p>
-						My engineering studies have allowed me to acquire skills in C, C++, C# (.NET), Java and SQL which completes my knowledge acquired as a self-taught person, such as Python, HTML, CSS as well as PHP. Finally, I use GNU/Linux and Windows operating systems.
+						My engineering studies have allowed me to acquire skills in C, C++, C# (.NET), Java and SQL which completes my knowledge acquired as a self-taught person, such as Python, HTML, CSS as well as some PHP. Finally, I use GNU/Linux and Windows operating systems.
 					</p>
 					<p>
 						Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker/9-ball). In my free time, I also like to watch movies and series... and cat pictures of course.
@@ -79,8 +79,8 @@
 				<hr />
 				<img alt="Langlsater Discord bot logo" src="./assets/images/langslater/langslater_logo.png" />
 				<article>
-					<h2>Langslater (Discord bot)</h2>
-					<p>Discord bot which translates messages which are not in a list of languages selected by the users.</p>
+					<h2>Langslater (Discord Bot)</h2>
+					<p>Discord Bot which translates messages which are not in the language selected by the servers' administrators.</p>
 				</article>
 				<a href="./langslater.html" class="button">Read more</a>
 			</section>
@@ -90,8 +90,8 @@
 				<hr />
 				<img alt="Anniminder Discord bot logo" src="./assets/images/anniminder/anniminder_logo.png" />
 				<article>
-					<h2>Anniminder (Discord bot)</h2>
-					<p>Discord bot which reminds people birthdays with a random sentence in the servers he set his birthday or can tell the birthday of someone else if asked by another user.</p>
+					<h2>Anniminder (Discord Bot)</h2>
+					<p>Discord Bot which reminds people birthdays with a random sentence in the servers he set his birthday or can tell the birthday of someone else if asked by another user.</p>
 				</article>
 				<a href="./anniminder.html" class="button">Read more</a>
 			</section>
