Started langslater.html + updated anniminder.html

--- a/anniminder.html
+++ b/anniminder.html
@@ -25,7 +25,7 @@
             <p>I started this project when I found people were missing other people's birthday because they were storing it in plain text in a dedicated channel and often people were missing it.</p>
 			<p>I used Python for the base of the project (with discord.py API wrapper) and SQL to store data in a SQLite database.</p>
 			<p>The usage of the bot is very basic since it uses Discord slash commands.<br />
-			When the bot is added in a new server, an ephemeral message is sent which explains how the bot works. (Yet to be done) <br />
+			When the bot is added in a new server, an ephemeral message is sent which explains how the bot works.<br />
 			Moreover, when a new user joins a server with Anniminder in it, he will receive a private message to be informed of the functioning of the bot.</p>
 			<p>To resume the available commands:
 			<ul>
