--- a/langslater.html
+++ b/langslater.html
@@ -18,11 +18,14 @@
 		</header>
 
         <section id="project">
-			<h2>Langslater (Discord bot)</h2>
+			<h2>Langslater (Discord Bot)</h2>
 			<hr />
 			<p><a href="https://github.com/TristanB0/Langslater_Discord_bot">Link to the GitHub of the project.</a></p>
-            <p><i>In early development.</i></p>
-			<!---->
+            <p>This project has for goal to translate every messages which are not in the language selected by Discord server administrators.</p>
+			<!--Reason to start the project-->
+			<!--Tools used-->
+			<!--Explanation-->
+			<!--List of commands-->
         </section>
         
         <footer>
