Added Mastodon link

--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
 						<a href="https://www.twitter.com/TristanB0" target="_blank" title="Come see my tweets" class="card-link">
 							<img src="./assets/images/2021-Twitter-logo-blue.png" alt="Twitter" />
 						</a>
+						<a href="https://floss.social/@TristanB0" target="_blank" title="Come see my toots" class="card-link">
+							<img src="./assets/images/mastodon-logo-purple.svg" alt="Mastodon" />
+						</a>
 						<a href="https://www.github.com/TristanB0" target="_blank" title="Link to my projects" class="card-link">
 							<img src="./assets/images/GitHub-Mark-32px.png" alt="GitHub" />
+						</a>
 						</a>
 					</div>
 				</aside>
