--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,7 @@
 		<title>Tristan Bony - Software Engineering Student</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="../styles/style.css" />
 		<link rel="icon" href="./assets/images/favicon.ico" />
 	</head>
 
